--- a/admin/src/pages/product/product.css
+++ b/admin/src/pages/product/product.css
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 0 10px 10px;
 }
 .product-add-btn {
     width: 80px;
